# PROB

./: .gitignore  CMakeLists.txt  coefficientCalculation.cpp  coefficientCalculation.h  kernelModifications.cpp  kernelModifications.h  main.cpp  pixelModifications.cpp  pixelModifications.h  segmentation.cpp  segmentation.h  typedefs.h
